:hammer: header feat(Home) Create home page and movie page

--- a/src/app/pages/layout/views/layout.component.html
+++ b/src/app/pages/layout/views/layout.component.html
@@ -1,11 +1,9 @@
-<div fullscreen>
-    <mat-sidenav-container fxLayout="row">
-        <div>
-            <app-header></app-header>
-        </div>
+<div class="container">
+    <div>
+        <app-header></app-header>
+    </div>
 
-        <div>
-            <router-outlet></router-outlet>
-        </div>
-    </mat-sidenav-container>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
 </div>
