--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
-
+@import './assets/scss/main.scss';
+@import 'swiper/scss';
+@import 'swiper/scss/navigation';
+@import 'swiper/scss/pagination';
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* {
+    box-sizing: border-box !important;
+    margin: 0;
+}
+
+span, p, h1, h2, h3, h4, h5 {
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
+
+span {
+    color: white !important;
+}
