:sparkles: homes feat(Homes) Create All the homes of the page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
 @import '../styles.scss';
 :host ::ng-deep {
-    background-color: rgb(14, 11, 19) !important;
+    background-color: #161518 !important;
 }
