--- a/src/assets/scss/themes/variables.scss
+++ b/src/assets/scss/themes/variables.scss
@@ -1,5 +1,6 @@
 $main-color: #0d253f;
 $secondary-color: #01b4e4;
 $tertiary-color: #90cea1;
+$background-color: #161518;
 $translucid: #b2b2b2;
 $text-color: white;
