--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,22 @@
 @import 'swiper/scss';
 @import 'swiper/scss/navigation';
 @import 'swiper/scss/pagination';
-html, body { height: 100%; }
+html, body {
+    height: 100%; 
+    background-color: $background-color !important;
+}
+
 * {
     box-sizing: border-box !important;
     margin: 0;
+}
+
+.w-100 {
+    width: 100% !important;
+}
+
+.h-100 {
+    height: 100% !important;
 }
 
 span, p, h1, h2, h3, h4, h5 {
@@ -14,4 +26,33 @@ span, p, h1, h2, h3, h4, h5 {
 
 span {
     color: white !important;
+}
+
+.pointer {
+    cursor: pointer !important;
+}
+
+.default {
+    cursor: default !important;
+}
+
+.error-image {
+    width: 124px !important;
+    height: 124px !important;
+}
+
+@keyframes skeleton {
+    0% { background-color: #1f1d1d; }
+    100%{ background-color: --background-color; }
+} 
+
+.skeleton {
+    width: 100% !important;
+    height: 100% !important;
+    border-radius: 6px !important;
+    animation-name: skeleton;
+    animation-duration: 1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
