--- a/src/app/shared/components/carousel/carousel.component.html
+++ b/src/app/shared/components/carousel/carousel.component.html
@@ -6,7 +6,7 @@
           <div class="w-100 h-100"
                fxLayout="row"
                fxLayoutAlign="center center">
-               <img class="image-carousel mat-elevation-z2" 
+               <img class="image-carousel" 
                     [src]="searchImage(movie)"
                     appImageLoading
                     (mouseover)="selectMovie(movie)"
