--- a/src/app/pages/layout/components/header/header.component.scss
+++ b/src/app/pages/layout/components/header/header.component.scss
@@ -18,25 +18,24 @@
 
     .content-container {
         width: 100% !important;
-        height: 120px;
-        z-index: 0;
+        height: 100% !important;
     }
 
     .content-container-xs {
         width: 100% !important;
-        height: 100px;
+        height: 100% !important;
         z-index: 0;
     }
 
     .header {
         width: 100% !important;
-        height: 60% !important;
+        height: 100% !important;
         padding: 0px 16px !important;
         background-color: $main-color!important;
     }
 
     .header-views{
-        width: 200px !important;
+        width: 220px !important;
         height: 100% !important;
     }
 
@@ -61,23 +60,24 @@
     }
 
     .header-search {
+        width: 480px !important;
+        height: 40px !important;
+        padding-left: 8px !important;
         background-color: white !important;
-        height: 40% !important;
-    }
-
-    .search {
-        width: 96% !important;
-        height: 100% !important;
+        border-bottom-left-radius: 25px !important;
+        border-bottom-right-radius: 25px !important;
+        border-top-left-radius: 25px !important;
+        border-top-right-radius: 25px !important;
     }
 
     input {
-        width: 97% !important;
+        width: 94% !important;
         height: 100% !important;
-        padding: 0 !important;
+        padding: 0 0 0 4px !important;
         border: none !important;
         font-size: 16px !important;
-        padding: 5px !important;
-        box-sizing: border-box !important;
+        border-bottom-right-radius: 25px !important;
+        border-top-right-radius: 25px !important;
 
         &:hover {
             border: none !important;
@@ -89,10 +89,19 @@
             outline: none !important;  
         }
     }
+
+    .icon {
+        width: 5% !important;
+        height: 100% !important;
+        border-top-left-radius: 25px !important;
+        border-bottom-left-radius: 25px !important;
+    }
     
     .mat-icon {
-        color: black !important;
-        font-size: 24px !important;
+        color: #2e2a2a !important;
+        width: 22px !important;
+        height: 22px !important;
+        font-size: 22px !important;
     }
 
     .text-xs {
