--- a/src/app/pages/layout/views/layout.component.html
+++ b/src/app/pages/layout/views/layout.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-    <div>
+    <div class="header-container mat-elevation-z4">
         <app-header></app-header>
     </div>
-
     <div>
         <router-outlet></router-outlet>
     </div>
