--- a/src/app/pages/movies/views/home-series/home-series.component.html
+++ b/src/app/pages/movies/views/home-series/home-series.component.html
@@ -39,7 +39,8 @@
                 <div class="w-100 h-100"
                      fxLayout="row"
                      fxLayoutAlign="center center">
-                    <img class="img mat-elevation-z2 pointer" 
+                    <img class="img mat-elevation-z2 pointer"
+                         appImageLoading 
                          [src]="searchImagePosterPath(movie)"
                          (click)="goToMovie({movie: movie, isMovie: false})">
                 </div>
