--- a/src/app/pages/movies/views/movie-details/movie-details.component.html
+++ b/src/app/pages/movies/views/movie-details/movie-details.component.html
@@ -1,7 +1,8 @@
 <div fxLayout="column"
      fxLayoutAlign="center center"
      fxLayoutGap="26px"
-     class="container">
+     class="container"
+     *ngIf="!spinner">
     <div class="detail"
          fxLayout="row">
         <div class="w-50"
@@ -67,4 +68,12 @@
                       (goToMovie)="goToMovie($event)">
         </app-carousel>
     </div>
+</div>
+<div class="spinner"
+     fxLayout="row"
+     fxLayoutAlign="center center"
+     *ngIf="spinner" >
+    <mat-spinner [diameter]="90"
+                [strokeWidth]="6">
+    </mat-spinner>
 </div>
