--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,8 +16,20 @@ html, body {
     width: 100% !important;
 }
 
+.w-90 {
+    width: 90% !important;
+}
+
+.w-80 {
+    width: 80% !important;
+}
+
 .h-100 {
     height: 100% !important;
+}
+
+.mb-24 {
+    margin-bottom: 24px !important;
 }
 
 span, p, h1, h2, h3, h4, h5 {
