--- a/src/app/pages/movies/views/tv-series-details/tv-series-details.component.scss
+++ b/src/app/pages/movies/views/tv-series-details/tv-series-details.component.scss
@@ -107,38 +107,76 @@
         background-color: grey !important;
     }
 
-    .add{
-        width: 25px !important;
-        height: 25px !important;
-        color: #0d253f !important;
-        font-size: 25px !important;
+    .icon-add {
         position: absolute;
-        top: 10px;
-        left: 10px;
-        cursor: pointer;
-        opacity: 0.6;
+        top: 4px;
+        left: 4px;
+        width: 35px !important;
+        height: 35px !important;
+        border-radius: 100% !important;
 
         &:hover {
+            background-color: rgba(13, 37, 63, 0.376);
             transition: all ease-in-out .5ms;
-            opacity: 1;
+
+            .add{
+                color: #0d253f !important;
+                transition: all ease-in-out .5ms;
+            }
         }
     }
 
-    .share{
-        width: 25px !important;
-        height: 25px !important;
-        color: #0d253f !important;
-        font-size: 25px !important;
+    .icon-share {
         position: absolute;
-        top: 10px;
-        right: 10px;
-        cursor: pointer;
-        opacity: 0.6;
+        top: 4px;
+        right: 4px;
+        width: 35px !important;
+        height: 35px !important;
+        border-radius: 100% !important;
 
         &:hover {
+            background-color: rgba(13, 37, 63, 0.376);
             transition: all ease-in-out .5ms;
-            opacity: 1;
+
+            .share {
+                color: #0d253f !important;
+                transition: all ease-in-out .5ms;
+            }
         }
+    }
+
+    .active-icon-add {
+        position: absolute;
+        top: 4px;
+        left: 4px;
+        width: 35px !important;
+        height: 35px !important;
+        border-radius: 100% !important;
+        background-color: rgba(13, 37, 63, 0.376);
+
+        .mat-icon {
+            color: #0d253f !important;
+            width: 24px !important;
+            height: 24px !important;
+            font-size: 24px !important;
+            cursor: pointer;
+        }
+    }
+
+    .add{
+        width: 24px !important;
+        height: 24px !important;
+        color: rgba(13, 37, 63, 0.6) !important;
+        font-size: 24px !important;
+        cursor: pointer;
+    }
+
+    .share{
+        width: 24px !important;
+        height: 24px !important;
+        color: rgba(13, 37, 63, 0.6) !important;
+        font-size: 24px !important;
+        cursor: pointer;
     }
 
     .company {
