--- a/src/app/pages/layout/components/header/header.component.scss
+++ b/src/app/pages/layout/components/header/header.component.scss
@@ -30,7 +30,7 @@
     .header {
         width: 100% !important;
         height: 100% !important;
-        padding: 0px 16px !important;
+        padding: 0px 30px !important;
         background-color: $main-color!important;
     }
 
@@ -106,5 +106,14 @@
 
     .text-xs {
         font-size: 14px !important;
+    }
+
+    .icon-social {
+        width: 32px !important;
+        height: 32px !important;
+    }
+
+    .w-200p {
+        width: 200px !important;
     }
 }
